--- a/Website/de.itemis.jee.websitenew/_layouts/documentation.html
+++ b/Website/de.itemis.jee.websitenew/_layouts/documentation.html
@@ -6,10 +6,7 @@ layout: default
   	<div id="page">  
 		<div class="inner">
 			<div id="maincontainer" class="container">
-				<div class="col-md-3" style="margin-left: 0px;">
-					{% include documentation-menu.md %}
-				</div>
-				<div class="col-md-8 doc-contents">
+				<div class="col-md-10">
 					{{ content }}
 				</div>
 			</div>
