--- a/Website/de.itemis.jee.websitenew/_includes/header.html
+++ b/Website/de.itemis.jee.websitenew/_includes/header.html
@@ -15,11 +15,11 @@
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
-					<li><a href="{{ site.baseurl }}/aboutus.html">&Uuml;ber uns</a></li>
 					<li><a href="{{ site.baseurl }}/documentation/index.html">Dokumentation</a></li>
 					<li><a href="{{ site.baseurl }}/download.html">Download</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
+					<li><a href="{{ site.baseurl }}/aboutus.html">Über uns</a></li>
               		<li><a href="{{ site.baseurl }}/impressum.html">Impressum</a></li>
               		<li><a href="{{ site.baseurl }}/kontakt.html">Kontakt</a></li>
             	</ul>
