--- a/Website/de.itemis.jee.websitenew/css/style.scss
+++ b/Website/de.itemis.jee.websitenew/css/style.scss
@@ -482,3 +482,27 @@ ul#markdown-toc li
 	background: url('{{ site.baseurl }}/images/bug-background.jpg') #00457c;
 	background-size: cover;
 }
+
+@media screen and (min-device-width: 768px) and (max-device-width: 1023px)
+{
+	#header_wrapper, .downloads, .bug-banner
+	{
+		background-size: 50%;
+	}	
+}
+
+@media screen and (min-device-width: 480px) and (max-device-width: 767px)
+{
+	#header_wrapper, .downloads, .bug-banner
+	{
+		background-size: 40%;
+	}	
+}
+
+@media screen and (max-device-width: 479px)
+{
+	#header_wrapper, .downloads, .bug-banner
+	{
+		background-size: 25%;
+	}	
+}
