* Hintergrundbilder nicht mehr skaliert.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@635 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/Website/de.itemis.jee.websitenew/css/style.scss
+++ b/Website/de.itemis.jee.websitenew/css/style.scss
@@ -483,6 +483,7 @@ ul#markdown-toc li
 	background-size: cover;
 }
 
+/*
 @media screen and (min-device-width: 768px) and (max-device-width: 1023px)
 {
 	#header_wrapper, .downloads, .bug-banner
@@ -506,3 +507,4 @@ ul#markdown-toc li
 		background-size: 25%;
 	}	
 }
+*/
