--- a/Website/de.itemis.jee.websitenew/css/style.scss
+++ b/Website/de.itemis.jee.websitenew/css/style.scss
@@ -104,6 +104,7 @@ ul {
 	background: #ffffff;
 	border-top: 1px solid #000;
 	padding-bottom: 20px;
+	margin: 0;
 	
 	h1 {
 		color: #00457c;
@@ -292,10 +293,15 @@ ul {
 	-moz-border-radius-bottomright: 9px;
 	-webkit-border-bottom-right-radius: 9px;
 
-	width: 100%;
+	min-width: 70%;
 	font-size: 12px;
 	color: #c0c2c2;
 	font-weight: 400;
+}
+
+.pricing a
+{
+	box-sizing: content-box;
 }
 
 .pricing thead th {
@@ -483,7 +489,7 @@ ul#markdown-toc li
 	background-size: cover;
 }
 
-@media screen and (max-device-width: 1023px)
+@media screen and (min-width: 768px) and (max-width: 1023px) and (orientation: landscape)
 {
 	#header_wrapper, .downloads
 	{
