* Layout grundlegend überarbeitet.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@647 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/Website/de.itemis.jee.websitenew/_layouts/download.html
+++ b/Website/de.itemis.jee.websitenew/_layouts/download.html
@@ -17,10 +17,11 @@ download:
  lin32: http://sourceforge.net/projects/jeegen/files/distro/eclipse-jee-generator-kepler-linux-gtk.tar.gz
 ---
 <div id="page">
-<div class="downloads">
-	<div class="container clearfix">
-		<!--table one starts-->
-	    <div class="col-md-4">
+	<div class="download-banner banner">
+		<div class="container clearfix">
+
+			<!--table one starts-->
+		    <div class="col-md-4">
 			    <table class="pricing">
 					<tfoot>
 					    <tr>
@@ -28,38 +29,38 @@ download:
 					    </tr>
 					</tfoot>
 					<tbody>
-				    <tr>
-						<td class="focus">Update Sites <span>Use Update Manager in Eclipse</span></td>
-				    </tr>
-				    <tr>
-				    	<td style="text-align: center;">
-				    	<a href="{{page.updateSite.release.kepler}}"
-				    	class="btn btn-primary btn-lg"
-				    	style="width: 70%;">Kepler Release</a></td>
-				    </tr>
-				    <tr>
-						<td style="text-align: center;">
-						<a href="{{page.updateSite.snapshot.kepler}}"
-				    	class="btn btn-primary btn-lg"
-				    	style="width: 70%;">Kepler Snapshot</a></td>
-				    </tr>
-				    <tr>
-						<td style="text-align: center;">
-						<a href="{{page.updateSite.release.luna}}"
-				    	class="btn btn-primary btn-lg"
-				    	style="width: 70%;">Luna Release</a></td>
-				    </tr>
-				   	<tr>
-						<td style="text-align: center;">
-						<a href="{{page.updateSite.snapshot.luna}}"
-				    	class="has-popover btn btn-primary btn-lg"
-				    	style="width: 70%;">Luna Snapshot</a></td>
-				    </tr>
-				</tbody>
-			    </table>
-	    </div>
-	    <div class="col-md-1">&nbsp;</div>
-	    <div class="col-md-4">
+						<tr>
+							<td class="focus">Update Sites <span>Use Update Manager in Eclipse</span></td>
+					    </tr>
+					    <tr>
+					    	<td style="text-align: center;">
+					    	<a href="{{page.updateSite.release.kepler}}"
+					    	class="btn btn-primary btn-lg"
+					    	style="width: 70%;">Kepler Release</a></td>
+					    </tr>
+					    <tr>
+							<td style="text-align: center;">
+							<a href="{{page.updateSite.snapshot.kepler}}"
+					    	class="btn btn-primary btn-lg"
+					    	style="width: 70%;">Kepler Snapshot</a></td>
+					    </tr>
+					    <tr>
+							<td style="text-align: center;">
+							<a href="{{page.updateSite.release.luna}}"
+					    	class="btn btn-primary btn-lg"
+					    	style="width: 70%;">Luna Release</a></td>
+					    </tr>
+					   	<tr>
+							<td style="text-align: center;">
+							<a href="{{page.updateSite.snapshot.luna}}"
+					    	class="has-popover btn btn-primary btn-lg"
+					    	style="width: 70%;">Luna Snapshot</a></td>
+					    </tr>
+					</tbody>
+				</table>
+		    </div>
+		    <div class="col-md-1">&nbsp;</div>
+		    <div class="col-md-4">
 			    <table class="pricing">
 					<tfoot>
 					    <tr>
@@ -94,9 +95,12 @@ download:
 					    </tr>
 					</tbody>
 			    </table>
+			</div>
 	    </div>
 	</div>
-</div>
-<div class="container clearfix">
-	{{content}}
+	<div class="container clearfix">
+		<div class="col-md-10">
+{{content}}
+		</div>
+	</div>
 </div>
