--- a/Website/de.itemis.jee.websitenew/_layouts/empty.html
+++ b/Website/de.itemis.jee.websitenew/_layouts/empty.html
@@ -4,6 +4,8 @@ layout: default
 
 <div id="page">
 	<div class="container clearfix">
-		{{content}}
+		<div class="col-md-10">
+{{content}}
+		</div>
 	</div>
 </div>
