--- a/Website/de.itemis.jee.websitenew/_layouts/kontakt.html
+++ b/Website/de.itemis.jee.websitenew/_layouts/kontakt.html
@@ -3,9 +3,9 @@ layout: default
 ---
 
 <div id="page">
-	<div class="bug-banner image-slider">
+	<div class="bug-banner banner">
 		<div class="container clearfix">
-			{{content}}
+{{content}}
 		</div>
 	</div>
 </div>
