--- a/Website/de.itemis.jee.websitenew/_layouts/documentation.html
+++ b/Website/de.itemis.jee.websitenew/_layouts/documentation.html
@@ -1,16 +1,10 @@
 ---
 layout: default
 ---
-<div class="page-content">
-  <div class="wrapper">
-  	<div id="page">  
-		<div class="inner">
-			<div id="maincontainer" class="container">
-				<div class="col-md-10">
-					{{ content }}
-				</div>
-			</div>
+<div id="page">
+	<div class="container flearfix">
+		<div class="col-md-10">
+{{ content }}
 		</div>
 	</div>
-  </div>
 </div>
