* iPad-Version angepasst.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@648 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/Website/de.itemis.jee.websitenew/css/style.scss
+++ b/Website/de.itemis.jee.websitenew/css/style.scss
@@ -433,6 +433,7 @@ ul#markdown-toc li
 {
 	background: url('{{ site.baseurl }}/images/background/contact.jpg') #00457c;
 	min-height: 826px;
+	background-color: white;
 }
 
 .banner
@@ -450,7 +451,17 @@ ul#markdown-toc li
 
 	.bug-banner
 	{
+		background-size: 160%;
+		background-repeat: no-repeat;
+	}	
+}
+
+@media screen and (max-width: 787px)
+{
+	.bug-banner
+	{
 		background-size: 120%;
 		background-repeat: no-repeat;
+		background-color: white;
 	}	
 }
