--- a/Website/de.itemis.jee.websitenew/_includes/head.html
+++ b/Website/de.itemis.jee.websitenew/_includes/head.html
@@ -19,6 +19,8 @@
 	<link href="{{ site.baseurl }}/css/bootstrap.min.css" rel="stylesheet" type='text/css'>
 	<link href="{{ site.baseurl }}/css/shield-responsive.css" rel="stylesheet" type='text/css'>
 	<link href='{{ site.baseurl }}/css/fonts.css' rel='stylesheet' type='text/css'>
+	<link href="{{ site.baseurl }}/css/prettyPhoto.css" rel="stylesheet" media="screen" type='text/css'> 
+	<link href="{{ site.baseurl }}/css/prettify.css" type="text/css" rel="stylesheet"/> 
 	<link href="{{ site.baseurl }}/css/style.css" rel="stylesheet" type='text/css'>
 
 	<!--[if lt IE 9]>
