--- a/Website/de.itemis.jeegen.website/_layouts/download.html
+++ b/Website/de.itemis.jeegen.website/_layouts/download.html
@@ -28,7 +28,10 @@ download:
 					</tfoot>
 					<tbody>
 						<tr>
-							<td class="focus">Update Sites <span>Use Update Manager in Eclipse</span></td>
+							<td class="focus">
+								<h1>Update Sites</h1>
+								<h2>Use Update Manager in Eclipse</h2>
+							</td>
 					    </tr>
 					    <tr>
 					    	<td style="text-align: center;">
@@ -67,7 +70,10 @@ download:
 					</tfoot>
 					<tbody>
 					    <tr>
-							<td class="focus">Full Eclipse <span>Just Download and Unzip</span></td>
+							<td class="focus">
+								<h1>Full Eclipse</h1>
+								<h2>Just Download and Unzip</h2>
+							</td>
 					    </tr>
 					    <tr>
 					    	<td style="text-align: center; white-space: nowrap;">
