--- a/Website/de.itemis.jeegen.website/css/style.scss
+++ b/Website/de.itemis.jeegen.website/css/style.scss
@@ -95,15 +95,8 @@ ul {
 	background: #ffffff;
 	border-top: 1px solid #000;
 	margin: 0;
-	
-	h1 {
-		color: #00457c;
-		font-weight: 400;
-		line-height: 1.3em;
-		font-style: normal;
-		word-spacing: 1px;
-	}
 }
+
 
 /* Introduction */
 .introduction {
@@ -141,8 +134,8 @@ ul {
 	}
 }
 
-.banner {
-	h2 {
+div.banner {
+	h1 {
 		margin-top: 40px;
 		font-size: 42px;
 		font-weight: 300;
@@ -151,6 +144,23 @@ ul {
 		text-transform: uppercase;
 		word-spacing: 10px;
 		z-index: 10;
+	}
+
+	td.focus
+	{
+
+		h1
+		{
+			margin: 0;
+			color: white;
+		}
+
+		h2
+		{
+			margin: 0;
+			color: white;
+			font-size: 0.5em;
+		}
 	}
 
 	p {
@@ -172,6 +182,8 @@ ul {
 		text-decoration: underline;
 	}
 }
+
+#page
 
 .btn_download {
 	background: url('{{ site.baseurl }}/images/download.png') no-repeat;
