* Neue Logos  * Version Bump auf nächsten Snapshot.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@670 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/Website/de.itemis.jeegen.website/_includes/head.html
+++ b/Website/de.itemis.jeegen.website/_includes/head.html
@@ -14,7 +14,7 @@
 	<![endif]-->
 
 	<link rel="apple-touch-icon-precomposed" href="{{ site.baseurl }}/images/favicon.png" type="image/png" />
-	<link rel="shortcut icon" href="{{ site.baseurl }}/images/favicon.png">
+	<link rel="shortcut icon" href="{{ site.baseurl }}/images/JEE-Logo.png">
 
 	<link href="{{ site.baseurl }}/css/bootstrap.min.css" rel="stylesheet" type='text/css'>
 	<link href="{{ site.baseurl }}/css/shield-responsive.css" rel="stylesheet" type='text/css'>
