--- a/Website/de.itemis.jeegen.website/_layouts/download.html
+++ b/Website/de.itemis.jeegen.website/_layouts/download.html
@@ -9,12 +9,20 @@ updateSite:
   luna: http://jee-generator.de/updates/snapshot/luna/
 
 download:
- osx64: http://sourceforge.net/projects/jeegen/files/distro/eclipse-jee-generator-kepler-macosx-cocoa-x86_64.tar.gz
- osx32: http://sourceforge.net/projects/jeegen/files/distro/eclipse-jee-generator-kepler-macosx-cocoa.tar.gz
- win64: http://sourceforge.net/projects/jeegen/files/distro/eclipse-jee-generator-kepler-win32-x86_64.zip
- win32: http://sourceforge.net/projects/jeegen/files/distro/eclipse-jee-generator-kepler-win32.zip
- lin64: http://sourceforge.net/projects/jeegen/files/distro/eclipse-jee-generator-kepler-linux-gtk-x86_64.tar.gz
- lin32: http://sourceforge.net/projects/jeegen/files/distro/eclipse-jee-generator-kepler-linux-gtk.tar.gz
+  kepler:
+    osx64: http://sourceforge.net/projects/jeegen/files/distro/eclipse-jee-generator-kepler-macosx-cocoa-x86_64.tar.gz
+    osx32: http://sourceforge.net/projects/jeegen/files/distro/eclipse-jee-generator-kepler-macosx-cocoa.tar.gz
+    win64: http://sourceforge.net/projects/jeegen/files/distro/eclipse-jee-generator-kepler-win32-x86_64.zip
+    win32: http://sourceforge.net/projects/jeegen/files/distro/eclipse-jee-generator-kepler-win32.zip
+    lin64: http://sourceforge.net/projects/jeegen/files/distro/eclipse-jee-generator-kepler-linux-gtk-x86_64.tar.gz
+    lin32: http://sourceforge.net/projects/jeegen/files/distro/eclipse-jee-generator-kepler-linux-gtk.tar.gz
+  luna:
+    osx64: http://sourceforge.net/projects/jeegen/files/distro/eclipse-jee-generator-luna-macosx-cocoa-x86_64.tar.gz
+    osx32: http://sourceforge.net/projects/jeegen/files/distro/eclipse-jee-generator-luna-macosx-cocoa.tar.gz
+    win64: http://sourceforge.net/projects/jeegen/files/distro/eclipse-jee-generator-luna-win32-x86_64.zip
+    win32: http://sourceforge.net/projects/jeegen/files/distro/eclipse-jee-generator-luna-win32.zip
+    lin64: http://sourceforge.net/projects/jeegen/files/distro/eclipse-jee-generator-luna-linux-gtk-x86_64.tar.gz
+    lin32: http://sourceforge.net/projects/jeegen/files/distro/eclipse-jee-generator-luna-linux-gtk.tar.gz
 ---
 <div id="page">
 	<div class="download-banner banner">
@@ -77,27 +85,49 @@ download:
 					    </tr>
 					    <tr>
 					    	<td style="text-align: center; white-space: nowrap;">
-					    	<a href="{{page.download.osx64}}" style="width: 45%;"
-					    	class="btn btn-primary btn-lg">OS X 64 Bit</a>&nbsp;
-					    	<a href="{{page.download.osx32}}" style="width: 25%;"
+					    	<a href="{{page.download.kepler.osx64}}" style="width: 45%;"
+					    	class="btn btn-primary btn-lg">Kepler OS X 64 Bit</a>&nbsp;
+					    	<a href="{{page.download.kepler.osx32}}" style="width: 25%;"
 					    	class="btn btn-primary btn-lg">32 Bit</a></td>
 					    </tr>
 					    <tr>
 					    	<td style="text-align: center; white-space: nowrap;">
-					    	<a href="{{page.download.lin64}}" style="width: 45%;"
-					    	class="btn btn-primary btn-lg">Linux 64 Bit</a>&nbsp;
-					    	<a href="{{page.download.lin32}}" style="width: 25%;"
+					    	<a href="{{page.download.kelper.lin64}}" style="width: 45%;"
+					    	class="btn btn-primary btn-lg">Kepler Linux 64 Bit</a>&nbsp;
+					    	<a href="{{page.download.kepler.lin32}}" style="width: 25%;"
 					    	class="btn btn-primary btn-lg">32 Bit</a></td>
 					    </tr>
 					    <tr>
 					    	<td style="text-align: center; white-space: nowrap;">
-					    	<a href="{{page.download.win64}}" style="width: 45%;"
-					    	class="btn btn-primary btn-lg">Windows 64 Bit</a>&nbsp;
-					    	<a href="{{page.download.win32}}" style="width: 25%;"
+					    	<a href="{{page.download.kepler.win64}}" style="width: 45%;"
+					    	class="btn btn-primary btn-lg">Kepler Windows 64 Bit</a>&nbsp;
+					    	<a href="{{page.download.kepler.win32}}" style="width: 25%;"
 					    	class="btn btn-primary btn-lg"
 					    	>32 Bit</a></td>
 					    </tr>
-					</tbody>
+					    <tr>
+					    	<td style="text-align: center; white-space: nowrap;">
+					    	<a href="{{page.download.luna.osx64}}" style="width: 45%;"
+					    	class="btn btn-primary btn-lg">Luna OS X 64 Bit</a>&nbsp;
+					    	<a href="{{page.download.luna.osx32}}" style="width: 25%;"
+					    	class="btn btn-primary btn-lg">32 Bit</a></td>
+					    </tr>
+					    <tr>
+					    	<td style="text-align: center; white-space: nowrap;">
+					    	<a href="{{page.download.luna.lin64}}" style="width: 45%;"
+					    	class="btn btn-primary btn-lg">Luna Linux 64 Bit</a>&nbsp;
+					    	<a href="{{page.download.luna.lin32}}" style="width: 25%;"
+					    	class="btn btn-primary btn-lg">32 Bit</a></td>
+					    </tr>
+					    <tr>
+					    	<td style="text-align: center; white-space: nowrap;">
+					    	<a href="{{page.download.luna.win64}}" style="width: 45%;"
+					    	class="btn btn-primary btn-lg">Luna Windows 64 Bit</a>&nbsp;
+					    	<a href="{{page.download.luna.win32}}" style="width: 25%;"
+					    	class="btn btn-primary btn-lg"
+					    	>32 Bit</a></td>
+					    </tr>
+            </tbody>
 			    </table>
 			</div>
 	    </div>
