--- a/Website/de.itemis.jeegen.website/_includes/head.html
+++ b/Website/de.itemis.jeegen.website/_includes/head.html
@@ -13,8 +13,8 @@
 	  <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
 
-	<link rel="apple-touch-icon-precomposed" href="{{ site.baseurl }}/images/favicon.png" type="image/png" />
-	<link rel="shortcut icon" href="{{ site.baseurl }}/images/JEE-Logo.png">
+	<link rel="apple-touch-icon-precomposed" href="{{ site.baseurl }}/images/JEE-Logo.png" type="image/png" />
+	<link rel="shortcut icon" href="{{ site.baseurl }}/images/favicon.png">
 
 	<link href="{{ site.baseurl }}/css/bootstrap.min.css" rel="stylesheet" type='text/css'>
 	<link href="{{ site.baseurl }}/css/shield-responsive.css" rel="stylesheet" type='text/css'>
