* Toplevel Domain von de auf org geändert.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@703 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/Website/de.itemis.jeegen.website/_layouts/download.html
+++ b/Website/de.itemis.jeegen.website/_layouts/download.html
@@ -2,11 +2,11 @@
 layout: default
 updateSite:
  release:
-  kepler: http://www.jee-generator.de/updates/kepler/
-  luna: http://www.jee-generator.de/updates/luna/
+  kepler: http://www.jee-generator.org/updates/kepler/
+  luna: http://www.jee-generator.org/updates/luna/
  snapshot:
-  kepler: http://www.jee-generator.de/updates/snapshot/kepler/
-  luna: http://www.jee-generator.de/updates/snapshot/luna/
+  kepler: http://www.jee-generator.org/updates/snapshot/kepler/
+  luna: http://www.jee-generator.org/updates/snapshot/luna/
 
 download:
   kepler:
