* Update Sites für Mars ergänzt.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@720 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/Website/org.jeegen.website/_layouts/download.html
+++ b/Website/org.jeegen.website/_layouts/download.html
@@ -4,9 +4,11 @@ updateSite:
  release:
   kepler: http://www.jee-generator.org/updates/kepler/
   luna: http://www.jee-generator.org/updates/luna/
+  mars: http://www.jee-generator.org/updates/mars/
  snapshot:
   kepler: http://www.jee-generator.org/updates/snapshot/kepler/
   luna: http://www.jee-generator.org/updates/snapshot/luna/
+  mars: http://www.jee-generator.org/updates/snapshot/mars/
 
 download:
   kepler:
@@ -64,6 +66,18 @@ download:
 							<a href="{{page.updateSite.snapshot.luna}}"
 					    	class="has-popover btn btn-primary btn-lg"
 					    	style="width: 70%;">Luna Snapshot</a></td>
+					    </tr>
+					    <tr>
+							<td style="text-align: center;">
+							<a href="{{page.updateSite.release.mars}}"
+					    	class="btn btn-primary btn-lg"
+					    	style="width: 70%;">Mars Release</a></td>
+					    </tr>
+					   	<tr>
+							<td style="text-align: center;">
+							<a href="{{page.updateSite.snapshot.mars}}"
+					    	class="has-popover btn btn-primary btn-lg"
+					    	style="width: 70%;">Mars Snapshot</a></td>
 					    </tr>
 					</tbody>
 				</table>
