--- a/Website/org.jeegen.website/_layouts/download.html
+++ b/Website/org.jeegen.website/_layouts/download.html
@@ -12,19 +12,25 @@ updateSite:
 
 download:
   kepler:
-    osx64: http://sourceforge.net/projects/jeegen/files/distro/eclipse-jee-generator-kepler-macosx-cocoa-x86_64.tar.gz
-    osx32: http://sourceforge.net/projects/jeegen/files/distro/eclipse-jee-generator-kepler-macosx-cocoa.tar.gz
-    win64: http://sourceforge.net/projects/jeegen/files/distro/eclipse-jee-generator-kepler-win32-x86_64.zip
-    win32: http://sourceforge.net/projects/jeegen/files/distro/eclipse-jee-generator-kepler-win32.zip
-    lin64: http://sourceforge.net/projects/jeegen/files/distro/eclipse-jee-generator-kepler-linux-gtk-x86_64.tar.gz
-    lin32: http://sourceforge.net/projects/jeegen/files/distro/eclipse-jee-generator-kepler-linux-gtk.tar.gz
+    osx64: http://sourceforge.net/projects/jeegen/files/distro/kepler/eclipse-jee-generator-kepler-SR2-macosx-cocoa-x86_64.tar.gz
+    osx32: http://sourceforge.net/projects/jeegen/files/distro/kepler/eclipse-jee-generator-kepler-SR2-macosx-cocoa.tar.gz
+    win64: http://sourceforge.net/projects/jeegen/files/distro/kepler/eclipse-jee-generator-kepler-SR2-win32-x86_64.zip
+    win32: http://sourceforge.net/projects/jeegen/files/distro/kepler/eclipse-jee-generator-kepler-SR2-win32.zip
+    lin64: http://sourceforge.net/projects/jeegen/files/distro/kepler/eclipse-jee-generator-kepler-SR2-linux-gtk-x86_64.tar.gz
+    lin32: http://sourceforge.net/projects/jeegen/files/distro/kepler/eclipse-jee-generator-kepler-SR2-linux-gtk.tar.gz
   luna:
-    osx64: http://sourceforge.net/projects/jeegen/files/distro/eclipse-jee-generator-luna-macosx-cocoa-x86_64.tar.gz
-    osx32: http://sourceforge.net/projects/jeegen/files/distro/eclipse-jee-generator-luna-macosx-cocoa.tar.gz
-    win64: http://sourceforge.net/projects/jeegen/files/distro/eclipse-jee-generator-luna-win32-x86_64.zip
-    win32: http://sourceforge.net/projects/jeegen/files/distro/eclipse-jee-generator-luna-win32.zip
-    lin64: http://sourceforge.net/projects/jeegen/files/distro/eclipse-jee-generator-luna-linux-gtk-x86_64.tar.gz
-    lin32: http://sourceforge.net/projects/jeegen/files/distro/eclipse-jee-generator-luna-linux-gtk.tar.gz
+    osx64: http://sourceforge.net/projects/jeegen/files/distro/luna/eclipse-jee-generator-luna-SR2-macosx-cocoa-x86_64.tar.gz
+    osx32: http://sourceforge.net/projects/jeegen/files/distro/luna/eclipse-jee-generator-luna-SR2-macosx-cocoa.tar.gz
+    win64: http://sourceforge.net/projects/jeegen/files/distro/luna/eclipse-jee-generator-luna-SR2-win32-x86_64.zip
+    win32: http://sourceforge.net/projects/jeegen/files/distro/luna/eclipse-jee-generator-luna-SR2-win32.zip
+    lin64: http://sourceforge.net/projects/jeegen/files/distro/luna/eclipse-jee-generator-luna-SR2-linux-gtk-x86_64.tar.gz
+    lin32: http://sourceforge.net/projects/jeegen/files/distro/luna/eclipse-jee-generator-luna-SR2-linux-gtk.tar.gz
+  mars:
+    osx64: http://sourceforge.net/projects/jeegen/files/distro/mars/eclipse-jee-generator-mars-M7-macosx-cocoa-x86_64.tar.gz
+    win64: http://sourceforge.net/projects/jeegen/files/distro/mars/eclipse-jee-generator-mars-M7-win32-x86_64.zip
+    win32: http://sourceforge.net/projects/jeegen/files/distro/mars/eclipse-jee-generator-mars-M7-win32.zip
+    lin64: http://sourceforge.net/projects/jeegen/files/distro/mars/eclipse-jee-generator-mars-M7-linux-gtk-x86_64.tar.gz
+    lin32: http://sourceforge.net/projects/jeegen/files/distro/mars/eclipse-jee-generator-mars-M7-linux-gtk.tar.gz
 ---
 <div id="page">
 	<div class="download-banner banner">
