--- a/Website/org.jeegen.website/_layouts/download.html
+++ b/Website/org.jeegen.website/_layouts/download.html
@@ -92,65 +92,69 @@ download:
 		    <div class="col-md-6">
 			    <table class="pricing">
 					<tfoot>
-					    <tr>
+						<tr>
 							<td></td>
-					    </tr>
+						</tr>
 					</tfoot>
 					<tbody>
-					    <tr>
+						<tr>
 							<td class="focus">
 								<h1>Full Eclipse</h1>
 								<h2>Just Download and Unzip</h2>
 							</td>
-					    </tr>
-					    <tr>
-					    	<td style="text-align: center; white-space: nowrap;">
-					    	<a href="{{page.download.kepler.osx64}}" style="width: 45%;"
-					    	class="btn btn-primary btn-lg">Kepler OS X 64 Bit</a>&nbsp;
-					    	<a href="{{page.download.kepler.osx32}}" style="width: 25%;"
-					    	class="btn btn-primary btn-lg">32 Bit</a></td>
-					    </tr>
-					    <tr>
-					    	<td style="text-align: center; white-space: nowrap;">
-					    	<a href="{{page.download.kelper.lin64}}" style="width: 45%;"
-					    	class="btn btn-primary btn-lg">Kepler Linux 64 Bit</a>&nbsp;
-					    	<a href="{{page.download.kepler.lin32}}" style="width: 25%;"
-					    	class="btn btn-primary btn-lg">32 Bit</a></td>
-					    </tr>
-					    <tr>
-					    	<td style="text-align: center; white-space: nowrap;">
-					    	<a href="{{page.download.kepler.win64}}" style="width: 45%;"
-					    	class="btn btn-primary btn-lg">Kepler Windows 64 Bit</a>&nbsp;
-					    	<a href="{{page.download.kepler.win32}}" style="width: 25%;"
-					    	class="btn btn-primary btn-lg"
-					    	>32 Bit</a></td>
-					    </tr>
-					    <tr>
-					    	<td style="text-align: center; white-space: nowrap;">
-					    	<a href="{{page.download.luna.osx64}}" style="width: 45%;"
-					    	class="btn btn-primary btn-lg">Luna OS X 64 Bit</a>&nbsp;
-					    	<a href="{{page.download.luna.osx32}}" style="width: 25%;"
-					    	class="btn btn-primary btn-lg">32 Bit</a></td>
-					    </tr>
-					    <tr>
-					    	<td style="text-align: center; white-space: nowrap;">
-					    	<a href="{{page.download.luna.lin64}}" style="width: 45%;"
-					    	class="btn btn-primary btn-lg">Luna Linux 64 Bit</a>&nbsp;
-					    	<a href="{{page.download.luna.lin32}}" style="width: 25%;"
-					    	class="btn btn-primary btn-lg">32 Bit</a></td>
-					    </tr>
-					    <tr>
-					    	<td style="text-align: center; white-space: nowrap;">
-					    	<a href="{{page.download.luna.win64}}" style="width: 45%;"
-					    	class="btn btn-primary btn-lg">Luna Windows 64 Bit</a>&nbsp;
-					    	<a href="{{page.download.luna.win32}}" style="width: 25%;"
-					    	class="btn btn-primary btn-lg"
-					    	>32 Bit</a></td>
-					    </tr>
-            </tbody>
-			    </table>
+						</tr>
+						<tr>
+						    	<td style="text-align: center; white-space: nowrap;">
+							    	<a href="{{page.download.kepler.osx64}}" style="width: 45%;"
+								    	class="btn btn-primary btn-lg">Kepler OS X 64 Bit</a>&nbsp;
+							    	<a href="{{page.download.kepler.osx32}}" style="width: 25%;"
+								    	class="btn btn-primary btn-lg">32 Bit</a>
+							</td>
+						</tr>
+						<tr>
+						    	<td style="text-align: center; white-space: nowrap;">
+							    	<a href="{{page.download.kepler.lin64}}" style="width: 45%;"
+								    	class="btn btn-primary btn-lg">Kepler Linux 64 Bit</a>&nbsp;
+							    	<a href="{{page.download.kepler.lin32}}" style="width: 25%;"
+								    	class="btn btn-primary btn-lg">32 Bit</a>
+							</td>
+						</tr>
+						<tr>
+						    	<td style="text-align: center; white-space: nowrap;">
+							    	<a href="{{page.download.kepler.win64}}" style="width: 45%;"
+								    	class="btn btn-primary btn-lg">Kepler Windows 64 Bit</a>&nbsp;
+							    	<a href="{{page.download.kepler.win32}}" style="width: 25%;"
+								    	class="btn btn-primary btn-lg">32 Bit</a>
+							</td>
+						</tr>
+						<tr>
+						    	<td style="text-align: center; white-space: nowrap;">
+							    	<a href="{{page.download.luna.osx64}}" style="width: 45%;"
+								    	class="btn btn-primary btn-lg">Luna OS X 64 Bit</a>&nbsp;
+							    	<a href="{{page.download.luna.osx32}}" style="width: 25%;"
+								    	class="btn btn-primary btn-lg">32 Bit</a>
+							</td>
+						</tr>
+						<tr>
+						    	<td style="text-align: center; white-space: nowrap;">
+							    	<a href="{{page.download.luna.lin64}}" style="width: 45%;"
+								    	class="btn btn-primary btn-lg">Luna Linux 64 Bit</a>&nbsp;
+							    	<a href="{{page.download.luna.lin32}}" style="width: 25%;"
+								    	class="btn btn-primary btn-lg">32 Bit</a>
+							</td>
+						</tr>
+						<tr>
+						    	<td style="text-align: center; white-space: nowrap;">
+							    	<a href="{{page.download.luna.win64}}" style="width: 45%;"
+								    	class="btn btn-primary btn-lg">Luna Windows 64 Bit</a>&nbsp;
+							    	<a href="{{page.download.luna.win32}}" style="width: 25%;"
+								    	class="btn btn-primary btn-lg">32 Bit</a>
+						</td>
+					</tr>
+					</tbody>
+				</table>
 			</div>
-	    </div>
+		</div>
 	</div>
 	<div class="container clearfix">
 		<div class="col-md-12">
