--- a/Website/org.jeegen.website/_layouts/download.html
+++ b/Website/org.jeegen.website/_layouts/download.html
@@ -1,14 +1,8 @@
 ---
 layout: default
 updateSite:
- release:
-  kepler: http://www.jee-generator.org/updates/kepler/
-  luna: http://www.jee-generator.org/updates/luna/
-  mars: http://www.jee-generator.org/updates/mars/
- snapshot:
-  kepler: http://www.jee-generator.org/updates/snapshot/kepler/
-  luna: http://www.jee-generator.org/updates/snapshot/luna/
-  mars: http://www.jee-generator.org/updates/snapshot/mars/
+ release: http://www.jee-generator.org/updates/release/
+ snapshot: http://www.jee-generator.org/updates/snapshot/
 
 download:
   kepler:
@@ -35,12 +29,12 @@ download:
 <div id="page">
 	<div class="download-banner banner">
 		<div class="container clearfix">
-		    <div class="col-md-6">
-			    <table class="pricing">
+			<div class="col-md-6">
+				<table class="pricing">
 					<tfoot>
-					    <tr>
+						<tr>
 							<td></td>
-					    </tr>
+						</tr>
 					</tfoot>
 					<tbody>
 						<tr>
@@ -48,49 +42,27 @@ download:
 								<h1>Update Sites</h1>
 								<h2>Use Update Manager in Eclipse</h2>
 							</td>
-					    </tr>
-					    <tr>
-					    	<td style="text-align: center;">
-					    	<a href="{{page.updateSite.release.kepler}}"
-					    	class="btn btn-primary btn-lg"
-					    	style="width: 70%;">Kepler Release</a></td>
-					    </tr>
-					    <tr>
+						</tr>
+						<tr>
 							<td style="text-align: center;">
-							<a href="{{page.updateSite.snapshot.kepler}}"
-					    	class="btn btn-primary btn-lg"
-					    	style="width: 70%;">Kepler Snapshot</a></td>
-					    </tr>
-					    <tr>
+								<a href="{{page.updateSite.release}}"
+									class="btn btn-primary btn-lg"
+									style="width: 70%;">Stable Release</a>
+							</td>
+						</tr>
+						<tr>
 							<td style="text-align: center;">
-							<a href="{{page.updateSite.release.luna}}"
-					    	class="btn btn-primary btn-lg"
-					    	style="width: 70%;">Luna Release</a></td>
-					    </tr>
-					   	<tr>
-							<td style="text-align: center;">
-							<a href="{{page.updateSite.snapshot.luna}}"
-					    	class="has-popover btn btn-primary btn-lg"
-					    	style="width: 70%;">Luna Snapshot</a></td>
-					    </tr>
-					    <tr>
-							<td style="text-align: center;">
-							<a href="{{page.updateSite.release.mars}}"
-					    	class="btn btn-primary btn-lg"
-					    	style="width: 70%;">Mars Release</a></td>
-					    </tr>
-					   	<tr>
-							<td style="text-align: center;">
-							<a href="{{page.updateSite.snapshot.mars}}"
-					    	class="has-popover btn btn-primary btn-lg"
-					    	style="width: 70%;">Mars Snapshot</a></td>
-					    </tr>
+								<a href="{{page.updateSite.snapshot}}"
+									class="btn btn-primary btn-lg"
+									style="width: 70%;">Snapshot</a>
+							</td>
+						</tr>
 					</tbody>
 				</table>
-		    </div>
+			</div>
 
-		    <div class="col-md-6">
-			    <table class="pricing">
+			<div class="col-md-6">
+				<table class="pricing">
 					<tfoot>
 						<tr>
 							<td></td>
@@ -104,53 +76,53 @@ download:
 							</td>
 						</tr>
 						<tr>
-						    	<td style="text-align: center; white-space: nowrap;">
-							    	<a href="{{page.download.kepler.osx64}}" style="width: 45%;"
-								    	class="btn btn-primary btn-lg">Kepler OS X 64 Bit</a>&nbsp;
-							    	<a href="{{page.download.kepler.osx32}}" style="width: 25%;"
-								    	class="btn btn-primary btn-lg">32 Bit</a>
+							<td style="text-align: center; white-space: nowrap;">
+								<a href="{{page.download.kepler.osx64}}" style="width: 45%;"
+									class="btn btn-primary btn-lg">Kepler OS X 64 Bit</a>&nbsp;
+								<a href="{{page.download.kepler.osx32}}" style="width: 25%;"
+									class="btn btn-primary btn-lg">32 Bit</a>
 							</td>
 						</tr>
 						<tr>
-						    	<td style="text-align: center; white-space: nowrap;">
-							    	<a href="{{page.download.kepler.lin64}}" style="width: 45%;"
-								    	class="btn btn-primary btn-lg">Kepler Linux 64 Bit</a>&nbsp;
-							    	<a href="{{page.download.kepler.lin32}}" style="width: 25%;"
-								    	class="btn btn-primary btn-lg">32 Bit</a>
+							<td style="text-align: center; white-space: nowrap;">
+								<a href="{{page.download.kepler.lin64}}" style="width: 45%;"
+									class="btn btn-primary btn-lg">Kepler Linux 64 Bit</a>&nbsp;
+								<a href="{{page.download.kepler.lin32}}" style="width: 25%;"
+									class="btn btn-primary btn-lg">32 Bit</a>
 							</td>
 						</tr>
 						<tr>
-						    	<td style="text-align: center; white-space: nowrap;">
-							    	<a href="{{page.download.kepler.win64}}" style="width: 45%;"
-								    	class="btn btn-primary btn-lg">Kepler Windows 64 Bit</a>&nbsp;
-							    	<a href="{{page.download.kepler.win32}}" style="width: 25%;"
-								    	class="btn btn-primary btn-lg">32 Bit</a>
+							<td style="text-align: center; white-space: nowrap;">
+								<a href="{{page.download.kepler.win64}}" style="width: 45%;"
+									class="btn btn-primary btn-lg">Kepler Windows 64 Bit</a>&nbsp;
+								<a href="{{page.download.kepler.win32}}" style="width: 25%;"
+									class="btn btn-primary btn-lg">32 Bit</a>
 							</td>
 						</tr>
 						<tr>
-						    	<td style="text-align: center; white-space: nowrap;">
-							    	<a href="{{page.download.luna.osx64}}" style="width: 45%;"
-								    	class="btn btn-primary btn-lg">Luna OS X 64 Bit</a>&nbsp;
-							    	<a href="{{page.download.luna.osx32}}" style="width: 25%;"
-								    	class="btn btn-primary btn-lg">32 Bit</a>
+							<td style="text-align: center; white-space: nowrap;">
+								<a href="{{page.download.luna.osx64}}" style="width: 45%;"
+									class="btn btn-primary btn-lg">Luna OS X 64 Bit</a>&nbsp;
+								<a href="{{page.download.luna.osx32}}" style="width: 25%;"
+									class="btn btn-primary btn-lg">32 Bit</a>
 							</td>
 						</tr>
 						<tr>
-						    	<td style="text-align: center; white-space: nowrap;">
-							    	<a href="{{page.download.luna.lin64}}" style="width: 45%;"
-								    	class="btn btn-primary btn-lg">Luna Linux 64 Bit</a>&nbsp;
-							    	<a href="{{page.download.luna.lin32}}" style="width: 25%;"
-								    	class="btn btn-primary btn-lg">32 Bit</a>
+							<td style="text-align: center; white-space: nowrap;">
+								<a href="{{page.download.luna.lin64}}" style="width: 45%;"
+									class="btn btn-primary btn-lg">Luna Linux 64 Bit</a>&nbsp;
+								<a href="{{page.download.luna.lin32}}" style="width: 25%;"
+									class="btn btn-primary btn-lg">32 Bit</a>
 							</td>
 						</tr>
 						<tr>
-						    	<td style="text-align: center; white-space: nowrap;">
-							    	<a href="{{page.download.luna.win64}}" style="width: 45%;"
-								    	class="btn btn-primary btn-lg">Luna Windows 64 Bit</a>&nbsp;
-							    	<a href="{{page.download.luna.win32}}" style="width: 25%;"
-								    	class="btn btn-primary btn-lg">32 Bit</a>
-						</td>
-					</tr>
+							<td style="text-align: center; white-space: nowrap;">
+								<a href="{{page.download.luna.win64}}" style="width: 45%;"
+									class="btn btn-primary btn-lg">Luna Windows 64 Bit</a>&nbsp;
+								<a href="{{page.download.luna.win32}}" style="width: 25%;"
+									class="btn btn-primary btn-lg">32 Bit</a>
+							</td>
+						</tr>
 					</tbody>
 				</table>
 			</div>
