--- a/Website/org.jeegen.website/_layouts/download.html
+++ b/Website/org.jeegen.website/_layouts/download.html
@@ -54,7 +54,7 @@ download:
 							<td style="text-align: center;">
 								<a href="{{page.updateSite.snapshot}}"
 									class="btn btn-primary btn-lg"
-									style="width: 70%;">Snapshot</a>
+									style="width: 70%;">Latest Build Snapshot</a>
 							</td>
 						</tr>
 					</tbody>
