--- a/Website/org.jeegen.website/_layouts/download.html
+++ b/Website/org.jeegen.website/_layouts/download.html
@@ -20,11 +20,11 @@ download:
     lin64: http://sourceforge.net/projects/jeegen/files/distro/luna/eclipse-jee-generator-luna-SR2-linux-gtk-x86_64.tar.gz
     lin32: http://sourceforge.net/projects/jeegen/files/distro/luna/eclipse-jee-generator-luna-SR2-linux-gtk.tar.gz
   mars:
-    osx64: http://sourceforge.net/projects/jeegen/files/distro/mars/eclipse-jee-generator-mars-M7-macosx-cocoa-x86_64.tar.gz
-    win64: http://sourceforge.net/projects/jeegen/files/distro/mars/eclipse-jee-generator-mars-M7-win32-x86_64.zip
-    win32: http://sourceforge.net/projects/jeegen/files/distro/mars/eclipse-jee-generator-mars-M7-win32.zip
-    lin64: http://sourceforge.net/projects/jeegen/files/distro/mars/eclipse-jee-generator-mars-M7-linux-gtk-x86_64.tar.gz
-    lin32: http://sourceforge.net/projects/jeegen/files/distro/mars/eclipse-jee-generator-mars-M7-linux-gtk.tar.gz
+    osx64: http://sourceforge.net/projects/jeegen/files/distro/mars/eclipse-jee-generator-mars-RC1-macosx-cocoa-x86_64.tar.gz
+    win64: http://sourceforge.net/projects/jeegen/files/distro/mars/eclipse-jee-generator-mars-RC1-win32-x86_64.zip
+    win32: http://sourceforge.net/projects/jeegen/files/distro/mars/eclipse-jee-generator-mars-RC1-win32.zip
+    lin64: http://sourceforge.net/projects/jeegen/files/distro/mars/eclipse-jee-generator-mars-RC1-linux-gtk-x86_64.tar.gz
+    lin32: http://sourceforge.net/projects/jeegen/files/distro/mars/eclipse-jee-generator-mars-RC1-linux-gtk.tar.gz
 ---
 <div id="page">
 	<div class="download-banner banner">
@@ -79,6 +79,7 @@ download:
 							<td style="text-align: center; white-space: nowrap;">
 								<a href="{{page.download.kepler.osx64}}" style="width: 45%;"
 									class="btn btn-primary btn-lg">Kepler OS X 64 Bit</a>&nbsp;
+								<span style="width: 25%;">&nbsp;</span>
 							</td>
 						</tr>
 						<tr>
@@ -101,6 +102,7 @@ download:
 							<td style="text-align: center; white-space: nowrap;">
 								<a href="{{page.download.luna.osx64}}" style="width: 45%;"
 									class="btn btn-primary btn-lg">Luna OS X 64 Bit</a>&nbsp;
+								<span style="width: 25%;">&nbsp;</span>
 							</td>
 						</tr>
 						<tr>
