--- a/Website/org.jeegen.website/_layouts/download.html
+++ b/Website/org.jeegen.website/_layouts/download.html
@@ -29,7 +29,7 @@ download:
 <div id="page">
 	<div class="download-banner banner">
 		<div class="container clearfix">
-			<div class="col-md-6">
+			<div class="col-md-4">
 				<table class="pricing">
 					<tfoot>
 						<tr>
@@ -61,7 +61,7 @@ download:
 				</table>
 			</div>
 
-			<div class="col-md-6">
+			<div class="col-md-4">
 				<table class="pricing">
 					<tfoot>
 						<tr>
@@ -71,54 +71,96 @@ download:
 					<tbody>
 						<tr>
 							<td class="focus">
-								<h1>Full Eclipse</h1>
+								<h1>Full Kepler Eclipse</h1>
 								<h2>Just Download and Unzip</h2>
 							</td>
 						</tr>
 						<tr>
 							<td style="text-align: center; white-space: nowrap;">
-								<a href="{{page.download.kepler.osx64}}" style="width: 45%;"
-									class="btn btn-primary btn-lg">Kepler OS X 64 Bit</a>&nbsp;
-								<span style="width: 25%;">&nbsp;</span>
+								<a href="{{page.download.kepler.osx64}}"
+									class="btn btn-primary btn-lg"
+									style="width: 70%;">Max OS X 64 Bit</a>
 							</td>
 						</tr>
 						<tr>
 							<td style="text-align: center; white-space: nowrap;">
-								<a href="{{page.download.kepler.lin64}}" style="width: 45%;"
-									class="btn btn-primary btn-lg">Kepler Linux 64 Bit</a>&nbsp;
-								<a href="{{page.download.kepler.lin32}}" style="width: 25%;"
-									class="btn btn-primary btn-lg">32 Bit</a>
+								<a href="{{page.download.kepler.lin64}}"
+									class="btn btn-primary btn-lg"
+									style="width: 70%;">Linux 64 Bit</a>
 							</td>
 						</tr>
 						<tr>
 							<td style="text-align: center; white-space: nowrap;">
-								<a href="{{page.download.kepler.win64}}" style="width: 45%;"
-									class="btn btn-primary btn-lg">Kepler Windows 64 Bit</a>&nbsp;
-								<a href="{{page.download.kepler.win32}}" style="width: 25%;"
-									class="btn btn-primary btn-lg">32 Bit</a>
+								<a href="{{page.download.kepler.lin32}}"
+									class="btn btn-primary btn-lg"
+									style="width: 70%;">Linux 32 Bit</a>
 							</td>
 						</tr>
 						<tr>
 							<td style="text-align: center; white-space: nowrap;">
-								<a href="{{page.download.luna.osx64}}" style="width: 45%;"
-									class="btn btn-primary btn-lg">Luna OS X 64 Bit</a>&nbsp;
-								<span style="width: 25%;">&nbsp;</span>
+								<a href="{{page.download.kepler.win64}}"
+									class="btn btn-primary btn-lg"
+									style="width: 70%;">Windows 64 Bit</a>
 							</td>
 						</tr>
 						<tr>
 							<td style="text-align: center; white-space: nowrap;">
-								<a href="{{page.download.luna.lin64}}" style="width: 45%;"
-									class="btn btn-primary btn-lg">Luna Linux 64 Bit</a>&nbsp;
-								<a href="{{page.download.luna.lin32}}" style="width: 25%;"
-									class="btn btn-primary btn-lg">32 Bit</a>
+								<a href="{{page.download.kepler.win32}}"
+									class="btn btn-primary btn-lg"
+									style="width: 70%;">Windows 32 Bit</a>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+
+			<div class="col-md-4">
+				<table class="pricing">
+					<tfoot>
+						<tr>
+							<td></td>
+						</tr>
+					</tfoot>
+					<tbody>
+						<tr>
+							<td class="focus">
+								<h1>Full Luna Eclipse</h1>
+								<h2>Just Download and Unzip</h2>
 							</td>
 						</tr>
 						<tr>
 							<td style="text-align: center; white-space: nowrap;">
-								<a href="{{page.download.luna.win64}}" style="width: 45%;"
-									class="btn btn-primary btn-lg">Luna Windows 64 Bit</a>&nbsp;
-								<a href="{{page.download.luna.win32}}" style="width: 25%;"
-									class="btn btn-primary btn-lg">32 Bit</a>
+								<a href="{{page.download.luna.osx64}}"
+									class="btn btn-primary btn-lg"
+									style="width: 70%;">Max OS X 64 Bit</a>
+							</td>
+						</tr>
+						<tr>
+							<td style="text-align: center; white-space: nowrap;">
+								<a href="{{page.download.luna.lin64}}"
+									class="btn btn-primary btn-lg"
+									style="width: 70%;">Linux 64 Bit</a>
+							</td>
+						</tr>
+						<tr>
+							<td style="text-align: center; white-space: nowrap;">
+								<a href="{{page.download.luna.lin32}}"
+									class="btn btn-primary btn-lg"
+									style="width: 70%;">Linux 32 Bit</a>
+							</td>
+						</tr>
+						<tr>
+							<td style="text-align: center; white-space: nowrap;">
+								<a href="{{page.download.luna.win64}}"
+									class="btn btn-primary btn-lg"
+									style="width: 70%;">Windows 64 Bit</a>
+							</td>
+						</tr>
+						<tr>
+							<td style="text-align: center; white-space: nowrap;">
+								<a href="{{page.download.luna.win32}}"
+									class="btn btn-primary btn-lg"
+									style="width: 70%;">Windows 32 Bit</a>
 							</td>
 						</tr>
 					</tbody>
