--- a/Website/org.jeegen.website/_includes/footer.html
+++ b/Website/org.jeegen.website/_includes/footer.html
@@ -1,15 +1,14 @@
 <footer>
-  <a href="#" class="scrollup fadeOutRight animated" style="display: none;">ScrollUp</a>
-  <!-- Le javascript
-      ================================================== -->
-  <!-- Placed at the end of the document so the pages load faster -->
+	<a href="#" class="scrollup fadeOutRight animated" style="display: none;">ScrollUp</a>
+	<!-- Le javascript ================================================== -->
+	<!-- Placed at the end of the document so the pages load faster -->
   
-  <script src="{{ site.baseurl }}/js/jquery.min.js"></script>
-  <script src="{{ site.baseurl }}/js/bootstrap.min.js"></script>
-  <script src="{{ site.baseurl }}/js/jquery.easing.1.3.js" type="text/javascript"></script>
-  <script src="{{ site.baseurl }}/js/jquery.prettyPhoto.js" type="text/javascript"></script>
-  <script src="{{ site.baseurl }}/js/prettify.js" type="text/javascript"></script>
-  <script src="{{ site.baseurl }}/js/lang-xtend.js" type="text/javascript"></script>
-  <script src="{{ site.baseurl }}/js/lang-common.js" type="text/javascript"></script>
-  <script src="{{ site.baseurl }}/js/custom.js" type="text/javascript"></script>
+	<script src="{{ site.baseurl }}/js/jquery.min.js"></script>
+	<script src="{{ site.baseurl }}/js/bootstrap.min.js"></script>
+	<script src="{{ site.baseurl }}/js/jquery.easing.1.3.js" type="text/javascript"></script>
+	<script src="{{ site.baseurl }}/js/jquery.prettyPhoto.js" type="text/javascript"></script>
+	<script src="{{ site.baseurl }}/js/prettify.js" type="text/javascript"></script>
+	<script src="{{ site.baseurl }}/js/lang-xtend.js" type="text/javascript"></script>
+	<script src="{{ site.baseurl }}/js/lang-common.js" type="text/javascript"></script>
+	<script src="{{ site.baseurl }}/js/custom.js" type="text/javascript"></script>
 </footer>
