--- a/JEE6/FacesTest/WebContent/resources/css/display.css
+++ b/JEE6/FacesTest/WebContent/resources/css/display.css
@@ -5,15 +5,15 @@ body {
 	font-family: sans-serif;
 	font-style: normal;
 	background-color: #fff;
-	color: #004c84;
+	color: #252E66;
 }
 
 a:LINK {
-	color: #004c84;
+	color: #252E66;
 }
 
 a:VISITED {
-	color: #004c84;
+	color: #252E66;
 }
 
 textarea {
@@ -81,10 +81,10 @@ input, select, textarea {
 div.box {
 	margin: 0px;
 	padding: 8px;
-	color: #004c84;
+	color: #252E66;
 	background-color: #f8f8f8;
 	border-style: solid;
-	border-color: #004c84;
+	border-color: #252E66;
 	border-width: 1px;
 	border-radius: 5px;
 }
@@ -103,7 +103,7 @@ div.box h2 {
 td.logo {
 	width: 48px;
 	text-align: center;
-	background-color: #004c84;
+	background-color: #f8f8f8;
 	vertical-align: middle;
 }
 
@@ -135,7 +135,7 @@ div.header table {
 div.header td {
 	padding: 8px;
 	border-style: solid;
-	border-color: #004c84;
+	border-color: #252E66;
 	border-width: 1px;
 	border-radius: 5px;
 }
@@ -160,7 +160,7 @@ td.box {
 	padding: 8px;
 	background-color: #f8f8f8;
 	border-style: solid;
-	border-color: #004c84;
+	border-color: #252E66;
 	border-width: 1px;
 	border-radius: 5px;
 }
@@ -170,7 +170,7 @@ table.list {
 	padding: 5px;
 	background-color: #f8f8f8;
 	border-style: solid;
-	border-color: #004c84;
+	border-color: #252E66;
 	border-width: 1px;
 	border-radius: 4px;
 }
@@ -220,13 +220,13 @@ div.footer {
 	clear: both;
 	margin: 0px;
 	padding: 0px;
-	background-color: #004c84;
+	background-color: #252E66;
 }
 
 table.error {
 	margin: 0px 0px 6px 0px;
 	padding: 8px;
-	color: #004c84;
+	color: #252E66;
 	background-color: #ffe7e7;
 	border-style: solid;
 	border-color: #df9898;
