* Neue Apple Logos.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@782 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/Website/org.jeegen.website/_includes/head.html
+++ b/Website/org.jeegen.website/_includes/head.html
@@ -13,7 +13,11 @@
 	  <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
 
-	<link rel="apple-touch-icon-precomposed" href="{{ site.baseurl }}/images/JEE-Logo.png" type="image/png" />
+	<link rel="apple-touch-icon-precomposed" href="{{ site.baseurl }}/images/jee-logo-114.png" sizes="114x108" type="image/png" />
+	<link rel="apple-touch-icon-precomposed" href="{{ site.baseurl }}/images/jee-logo-120.png" sizes="120x114" type="image/png" />
+	<link rel="apple-touch-icon-precomposed" href="{{ site.baseurl }}/images/jee-logo-144.png" sizes="144x136" type="image/png" />
+	<link rel="apple-touch-icon-precomposed" href="{{ site.baseurl }}/images/jee-logo-152.png" sizes="152x144" type="image/png" />
+
 	<link rel="shortcut icon" href="{{ site.baseurl }}/images/favicon.png">
 
 	<link href="{{ site.baseurl }}/css/bootstrap.min.css" rel="stylesheet" type='text/css'>
