* Weitere Icons ergänzt.
git-svn-id: svn+ssh://svn.code.sf.net/p/jeegen/code/trunk@783 2b804697-b555-4dd3-bbc5-4dc99f919620

--- a/Website/org.jeegen.website/_includes/head.html
+++ b/Website/org.jeegen.website/_includes/head.html
@@ -17,6 +17,8 @@
 	<link rel="apple-touch-icon-precomposed" href="{{ site.baseurl }}/images/jee-logo-120.png" sizes="120x114" type="image/png" />
 	<link rel="apple-touch-icon-precomposed" href="{{ site.baseurl }}/images/jee-logo-144.png" sizes="144x136" type="image/png" />
 	<link rel="apple-touch-icon-precomposed" href="{{ site.baseurl }}/images/jee-logo-152.png" sizes="152x144" type="image/png" />
+	<link rel="apple-touch-icon-precomposed" href="{{ site.baseurl }}/images/jee-logo-167.png" sizes="167x158" type="image/png" />
+	<link rel="apple-touch-icon-precomposed" href="{{ site.baseurl }}/images/jee-logo-180.png" sizes="180x170" type="image/png" />
 
 	<link rel="shortcut icon" href="{{ site.baseurl }}/images/favicon.png">
 
