--- a/Website/org.jeegen.website/_includes/header.html
+++ b/Website/org.jeegen.website/_includes/header.html
@@ -21,6 +21,7 @@
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="{{ site.baseurl }}/aboutus.html">Über uns</a></li>
 					<li><a href="{{ site.baseurl }}/impressum.html">Impressum</a></li>
+					<li><a href="{{ site.baseurl }}/datenschutz.html.html">Datenschutz</a></li>
 					<li><a href="{{ site.baseurl }}/kontakt.html">Kontakt</a></li>
 				</ul>
 			</div>
