--- a/Website/org.jeegen.website/_layouts/datenschutz.html
+++ b/Website/org.jeegen.website/_layouts/datenschutz.html
@@ -3,8 +3,8 @@ layout: default
 ---
 
 <div id="page">
-	<div class="bug-banner banner">
-		<div class="container clearfix">
+	<div class="container clearfix">
+		<div class="col-md-12">
 
 <h2>Datenschutzerklärung</h2>
 <h3 id="dsg-general-intro"></h3>
