--- a/Website/org.jeegen.website/_layouts/datenschutz.html
+++ b/Website/org.jeegen.website/_layouts/datenschutz.html
@@ -34,7 +34,7 @@ EMail: info@jee-generator.org</span></p><h3 id="dsg-general-datatype">Arten der 
 <li>Kontaktdaten (z.B., E-Mail, Telefonnummern).</li>
 <li>Inhaltsdaten (z.B., Texteingaben, Fotografien, Videos).</li>
 <li>Nutzungsdaten (z.B., besuchte Webseiten, Interesse an Inhalten, Zugriffszeiten).</li>
-<li>Meta-/Kommunikationsdaten (z.B., Geräte-Informationen, IP-Adressen).<li>
+<li>Meta-/Kommunikationsdaten (z.B., Geräte-Informationen, IP-Adressen).</li>
 </ul>
 </p>
 <h3 id="dsg-allgemein-general-datasubjects"></h3>
