Added Apple touch title.

--- a/Website/org.jeegen.website/_includes/head.html
+++ b/Website/org.jeegen.website/_includes/head.html
@@ -13,6 +13,8 @@
 	  <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
 
+	<meta name="apple-mobile-web-app-title" content="JEE-Generator" />
+
 	<link rel="apple-touch-icon-precomposed" href="{{ site.baseurl }}/images/jee-logo-114.png" sizes="114x114" type="image/png" />
 	<link rel="apple-touch-icon-precomposed" href="{{ site.baseurl }}/images/jee-logo-120.png" sizes="120x120" type="image/png" />
 	<link rel="apple-touch-icon-precomposed" href="{{ site.baseurl }}/images/jee-logo-144.png" sizes="144x144" type="image/png" />
