Preparation for Eclipse 2021-12.

--- a/Website/org.jeegen.website/_layouts/download.html
+++ b/Website/org.jeegen.website/_layouts/download.html
@@ -49,6 +49,12 @@ download:
     win32: http://sourceforge.net/projects/jeegen/files/distro/photon/eclipse-jee-generator-2020-03-R-win32.zip
     lin64: http://sourceforge.net/projects/jeegen/files/distro/photon/eclipse-jee-generator-2020-03-R-linux-gtk-x86_64.tar.gz
     lin32: http://sourceforge.net/projects/jeegen/files/distro/photon/eclipse-jee-generator-2020-03-R-linux-gtk.tar.gz
+  2021-12:
+    osx64: http://sourceforge.net/projects/jeegen/files/distro/photon/eclipse-jee-generator-2021-12-R-macosx-cocoa-x86_64.tar.bz2
+    win64: http://sourceforge.net/projects/jeegen/files/distro/photon/eclipse-jee-generator-2021-12-R-win32-x86_64.zip
+    win32: http://sourceforge.net/projects/jeegen/files/distro/photon/eclipse-jee-generator-2021-12-R-win32.zip
+    lin64: http://sourceforge.net/projects/jeegen/files/distro/photon/eclipse-jee-generator-2021-12-R-linux-gtk-x86_64.tar.gz
+    lin32: http://sourceforge.net/projects/jeegen/files/distro/photon/eclipse-jee-generator-2021-12-R-linux-gtk.tar.gz
 ---
 <div id="page">
 	<div class="download-banner banner">
@@ -85,6 +91,7 @@ download:
 				</table>
 			</div>
 
+<!--
 			<div class="col-md-4">
 				<table class="pricing">
 					<tfoot>
@@ -123,6 +130,7 @@ download:
 					</tbody>
 				</table>
 			</div>
+-->
 
 			<div class="col-md-4">
 				<table class="pricing">
@@ -134,27 +142,27 @@ download:
 					<tbody>
 						<tr>
 							<td class="focus">
-								<h1>Full 2020-03 Eclipse</h1>
+								<h1>Full 2021-12 Eclipse</h1>
 								<h2>Just Download and Unzip</h2>
 							</td>
 						</tr>
 						<tr>
 							<td style="text-align: center; white-space: nowrap;">
-								<a href="{{page.download.2020-03.osx64}}"
+								<a href="{{page.download.2021-12.osx64}}"
 									class="btn btn-primary btn-lg"
 									style="width: 70%;">Max OS X 64 Bit</a>
 							</td>
 						</tr>
 						<tr>
 							<td style="text-align: center; white-space: nowrap;">
-								<a href="{{page.download.2020-03.lin64}}"
+								<a href="{{page.download.2021-12.lin64}}"
 									class="btn btn-primary btn-lg"
 									style="width: 70%;">Linux 64 Bit</a>
 							</td>
 						</tr>
 						<tr>
 							<td style="text-align: center; white-space: nowrap;">
-								<a href="{{page.download.2020-03.win64}}"
+								<a href="{{page.download.2021-12.win64}}"
 									class="btn btn-primary btn-lg"
 									style="width: 70%;">Windows 64 Bit</a>
 							</td>
